# tinyfiledb

./: .gitignore  README.md  demo.py  pyproject.toml
tinyfiledb/: db.py
